Add dsci configuration option
Some Quectel modules (EP06) do not have `ccinfo` notifications.
You may switch back to (less efficient) `dsci` notifications by `dsci=on` configuration switch.

--- a/quectel.conf
+++ b/quectel.conf
@@ -42,6 +42,8 @@ initstate=start				; specified initial state of device, must be one of 'stop' 's
 ;msg_storage=auto			; auto,sm,me,mt,sr
 ;msg_direct=none			; none,on,off
 
+;dsci=off					; on,off
+
 ; quectel required settings
 [quectel0]
 audio=/dev/ttyUSB1			; tty port for Audio, set as ttyUSB4 for Simcom if no other dev present
