--- a/uac/quectel.conf
+++ b/uac/quectel.conf
@@ -42,6 +42,8 @@ initstate=start				; specified initial state of device, must be one of 'stop' 's
 ;msg_storage=auto			; auto,sm,me,mt,sr
 ;msg_direct=none			; none,on,off
 
+;dsci=off					; on,off
+
 ; quectel required settings
 [quectel0]
 data=/dev/ttyUSB2			; tty port for AT commands; 		no default value
