Add make-release-tag.cmake script
Helper script - automatic creation of annotaded release tag.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,7 +76,7 @@ IF(IS_DIRECTORY ${CMAKE_SOURCE_DIR}/.git)
         LIST(GET GIT_LOG 1 CHAN_SOURCE_TS)
     ELSE()
         MESSAGE(FATAL_ERROR "Git - unable to get timestamp of last commit")
-    ENDIF()    
+    ENDIF()
 ELSE()
     UNSET(IS_GIT_REPO)
     IF(EXISTS ${CMAKE_SOURCE_DIR}/pkg-vars.cmake)
@@ -96,7 +96,7 @@ IF(NOT(DEFINED CHAN_VER_MAJOR AND DEFINED CHAN_VER_MINOR AND DEFINED CHAN_VER_PA
 ENDIF()
 
 SetProjectVersion(${CHAN_VER_MAJOR} ${CHAN_VER_MINOR} ${CHAN_VER_PATCH} ${CHAN_VER_TWEAK} ${CHAN_STATUS})
-MESSAGE(STATUS "Source version: ${CHAN_SOURCE_VERSION} [${CHAN_SOURCE_TS}]")
+MESSAGE(DEBUG "Source version: ${CHAN_SOURCE_VERSION} [${CHAN_SOURCE_TS}]")
 MESSAGE(STATUS "Project version: ${CHAN_VER_STR}")
 
 # CMake
