Update configuration files
Add `qhup` option.

--- a/etc/quectel.conf
+++ b/etc/quectel.conf
@@ -43,6 +43,7 @@ initstate=start				; specified initial state of device, must be one of 'stop' 's
 ;msg_direct=none			; none,on,off
 
 ;dsci=off					; on,off
+;qhup=on					; onf,off
 
 ; quectel required settings
 [quectel0]
