--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,8 +17,19 @@ env:
   UBUNTU_DISTRO: ubuntu22.04
 
 jobs:
+  formatting-check:
+    name: Formatting Check
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - uses: jidicula/clang-format-action@v4.11.0
+      with:
+        clang-format-version: 16
+        check-path: src
+
   pre-build:
     runs-on: ubuntu-latest
+    needs: formatting-check
     steps:
     - name: Checkout actions
       uses: actions/checkout@v3
