CMake - add code formatting targets
New targets:

  - asterisk-chan-quectel-code-formatter,
  - asterisk-chan-quectel-code-formatting-check.

New helper script: format-chan-quectel.cmake.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,35 @@
 
 CMAKE_MINIMUM_REQUIRED(VERSION 3.19)
 
+FUNCTION(FindClangFormat OutVar)
+    UNSET(CLANG_FORMAT_EXE)
+
+    FILE(REAL_PATH "~" HOME_DIR EXPAND_TILDE)
+    CMAKE_PATH(APPEND HOME_DIR .vscode extensions OUTPUT_VARIABLE VSCODE_EXTENSIONS_DIR)
+    IF(EXISTS ${VSCODE_EXTENSIONS_DIR})
+        FILE(GLOB CPPTOOLS_DIR "${VSCODE_EXTENSIONS_DIR}/ms-vscode.cpptools*")
+        FOREACH(P ${CPPTOOLS_DIR})
+            CMAKE_PATH(APPEND P LLVM bin OUTPUT_VARIABLE VSE_BIN_DIR)
+            IF(NOT EXISTS ${VSE_BIN_DIR})
+                CONTINUE()
+            ENDIF()
+
+            FIND_PROGRAM(CLANG_FORMAT_EXE NAME clang-format HINTS ${VSE_BIN_DIR} NO_CACHE NO_DEFAULT_PATH)
+            IF(NOT ${CLANG_FORMAT_EXE} STREQUAL CLANG_FORMAT_EXE-NOTFOUND)
+                SET(${OutVar} ${CLANG_FORMAT_EXE} PARENT_SCOPE)
+                RETURN()
+            ENDIF()
+        ENDFOREACH()
+    ENDIF()
+
+    FIND_PROGRAM(CLANG_FORMAT_EXE NAME clang-format NO_CACHE)
+    IF(${CLANG_FORMAT_EXE} STREQUAL CLANG_FORMAT_EXE-NOTFOUND)
+        SET(${OutVar} ${CLANG_FORMAT_EXE} PARENT_SCOPE)
+    ELSE()
+        SET(${OutVar} ${OutVar}-NOTFOUND PARENT_SCOPE)
+    ENDIF()
+ENDFUNCTION()
+
 FUNCTION(SetProjectVersion cmajor cminor cpatch ctweak cstatus)
     MATH(EXPR MMAJOR "${cmajor}")
     MATH(EXPR MMINOR "${cminor}")
@@ -25,6 +54,15 @@ FUNCTION(SetProjectVersion cmajor cminor cpatch ctweak cstatus)
         SET(CHAN_VER_FSTR "${MMAJOR}.${MMINOR}.${MPATCH}_${MTWEAK}${cstatus}" PARENT_SCOPE)
     ENDIF()
 ENDFUNCTION()
+
+SET(CLANG_FORMAT CLANG_FORMAT-NOTFOUND CACHE FILEPATH "C/C++/Java/JavaScript/JSON/Objective-C/Protobuf/C# code formatter")
+IF(NOT CLANG_FORMAT OR "${CLANG_FORMAT}" STREQUAL CLANG_FORMAT-NOTFOUND)
+    UNSET(CLANG_FORMAT_PATH)
+    FindClangFormat(CLANG_FORMAT_PATH)
+    MESSAGE(STATUS "Found clang-format: ${CLANG_FORMAT_PATH}")
+    SET(CLANG_FORMAT ${CLANG_FORMAT_PATH} CACHE FILEPATH "C/C++/Java/JavaScript/JSON/Objective-C/Protobuf/C# code formatter" FORCE)
+    UNSET(CLANG_FORMAT_PATH)
+ENDIF()
 
 #
 #
