Use markdown version of LICENSE file

--- a/openwrt/makefile-git.in
+++ b/openwrt/makefile-git.in
@@ -17,7 +17,7 @@ PKG_RELEASE:=$(AUTORELEASE)
 PKG_SOURCE_VERSION:=@CHAN_SOURCE_VERSION@
 
 PKG_LICENSE:=GPL-2.0
-PKG_LICENSE_FILES:=COPYRIGHT.txt LICENSE.txt
+PKG_LICENSE_FILES:=COPYRIGHT.txt LICENSE.md
 PKG_MAINTAINER:=Edmunt Pienkowsky <roed@onet.eu>
 PKG_INSTALL:=1
 
