--- a/openwrt/makefile-standalone.in
+++ b/openwrt/makefile-standalone.in
@@ -11,7 +11,7 @@ PKG_NAME:=@PROJECT_NAME@
 PKG_VERSION=@CHAN_VER_STR@
 
 PKG_LICENSE:=GPL-2.0
-PKG_LICENSE_FILES:=COPYRIGHT.txt LICENSE.txt
+PKG_LICENSE_FILES:=COPYRIGHT.txt LICENSE.md
 PKG_MAINTAINER:=Edmunt Pienkowsky <roed@onet.eu>
 PKG_INSTALL:=1
 MAKE_PATH:=src
