--- a/.github/actions/install-openwrt-sdk/action.yml
+++ b/.github/actions/install-openwrt-sdk/action.yml
@@ -14,6 +14,10 @@ inputs:
     required: false
     description: EABI
     default: false
+  kirkwood:
+    required: false
+    description: Kirkwood
+    default: false
 runs:
   using: composite
   steps:
@@ -32,14 +36,21 @@ runs:
 
     - name: Download OpenWRT SDK (eabi)
       id: download-owrt-sdk-eabi
-      if: steps.cache-owrt-sdk-restore.outputs.cache-hit != 'true' && inputs.eabi == 'true'
+      if: steps.cache-owrt-sdk-restore.outputs.cache-hit != 'true' && inputs.kirkwood != 'true' && inputs.eabi == 'true'
       shell: bash
       working-directory: owrtsdk
       run: ${{ github.action_path }}/download-owrt-sdk.sh ${{ inputs.target }} ${{ inputs.openwrt-version }} openwrt-sdk-${{ inputs.openwrt-version }}-${{ inputs.target }}_gcc-11.2.0_musl_eabi.Linux-x86_64
 
+    - name: Download OpenWRT SDK (kirkwood)
+      id: download-owrt-sdk-kirkwood
+      if: steps.cache-owrt-sdk-restore.outputs.cache-hit != 'true' && inputs.kirkwood == 'true' && inputs.eabi == 'true'
+      shell: bash
+      working-directory: owrtsdk
+      run: ${{ github.action_path }}/download-owrt-sdk.sh ${{ inputs.target }} ${{ inputs.openwrt-version }} openwrt-sdk-${{ inputs.openwrt-version }}-kirkwood_gcc-11.2.0_musl_eabi.Linux-x86_64      
+
     - name: Download OpenWRT SDK
       id: download-owrt-sdk
-      if: steps.cache-owrt-sdk-restore.outputs.cache-hit != 'true' && inputs.eabi != 'true'
+      if: steps.cache-owrt-sdk-restore.outputs.cache-hit != 'true' && inputs.kirkwood != 'true' && inputs.eabi != 'true'
       shell: bash
       working-directory: owrtsdk
       run: ${{ github.action_path }}/download-owrt-sdk.sh ${{ inputs.target }} ${{ inputs.openwrt-version }} openwrt-sdk-${{ inputs.openwrt-version }}-${{ inputs.target }}_gcc-11.2.0_musl.Linux-x86_64
