--- a/.github/actions/install-required-packages/action.yml
+++ b/.github/actions/install-required-packages/action.yml
@@ -8,7 +8,7 @@ runs:
       with:
         packages: |
           git wget
-          build-essential
+          build-essential python2
           libasound2-dev libsqlite3-dev asterisk-dev
   
     - name: Git configuration
