--- a/openwrt/CMakeLists.txt
+++ b/openwrt/CMakeLists.txt
@@ -2,11 +2,28 @@
 # OpenWRT
 #
 
-INSTALL(
-  FILES diffconfig
-  DESTINATION openwrt
-  COMPONENT openwrt EXCLUDE_FROM_ALL
-)
+STRING(SUBSTRING ${ASTERISK_VERSION_NUM} 0 2 ASTERISK_MAJOR_VER)
+IF(${ASTERISK_MAJOR_VER} LESS_EQUAL 16)
+  SET(ASTERISK_PKG asterisk${ASTERISK_MAJOR_VER})
+  SET(PKG_CMAKE_OPTIONS "CMAKE_OPTIONS += -DAST_HEADER_DIR=$(STAGING_DIR)/usr/include/asterisk-${ASTERISK_MAJOR_VER}/include")
+  MESSAGE(STATUS "Package options: ${PKG_CMAKE_OPTIONS}")
+  CONFIGURE_FILE(diffconfig.in diffconfig-gen @ONLY)
+  INSTALL(
+    FILES ${CMAKE_CURRENT_BINARY_DIR}/diffconfig-gen
+    DESTINATION openwrt
+    COMPONENT openwrt EXCLUDE_FROM_ALL
+    RENAME diffconfig
+  )
+ELSE()
+  SET(ASTERISK_PKG asterisk)
+  UNSET(PKG_CMAKE_OPTIONS)
+  MESSAGE(DEBUG "Package options: none")
+  INSTALL(
+    FILES diffconfig
+    DESTINATION openwrt
+    COMPONENT openwrt EXCLUDE_FROM_ALL
+  )
+ENDIF()
 
 INSTALL(
   FILES readme-package-building.txt
@@ -48,6 +65,12 @@ IF(OPENWRT_PACKAGE_STANDALONE)
       PATTERN "doc" EXCLUDE
       PATTERN ".git" EXCLUDE
       PATTERN ".vscode" EXCLUDE
+      PATTERN "make-*.cmake" EXCLUDE
+      PATTERN "install-*.cmake" EXCLUDE
+      PATTERN "build-*.cmake" EXCLUDE
+      PATTERN "clang-*.cmake" EXCLUDE
+      PATTERN ".clang-format" EXCLUDE
+      PATTERN "diffconfig.in" EXCLUDE
   )
 
   CONFIGURE_FILE(pkg-vars.cmake.in pkg-vars.cmake @ONLY)
