--- a/openwrt/pkg-vars.cmake.in
+++ b/openwrt/pkg-vars.cmake.in
@@ -13,3 +13,5 @@ SET(CHAN_VER_PATCH "@CHAN_VER_PATCH@")
 SET(CHAN_VER_TWEAK "@CHAN_VER_TWEAK@")
 
 SET(CHAN_STATUS "@CHAN_STATUS@")
+
+SET(ASTERISK_VERSION_NUM "@ASTERISK_VERSION_NUM@")
