--- a/openwrt/makefile-git.in
+++ b/openwrt/makefile-git.in
@@ -23,6 +23,8 @@ PKG_INSTALL:=1
 
 MODULES_DIR:=/usr/lib/asterisk/modules
 
+@PKG_CMAKE_OPTIONS@
+
 include $(INCLUDE_DIR)/package.mk
 include $(INCLUDE_DIR)/cmake.mk
  
@@ -31,7 +33,7 @@ define Package/@PROJECT_NAME@
   SECTION:=net
   CATEGORY:=Network
   URL:=http://github.com/RoEdAl/@PROJECT_NAME@
-  DEPENDS:=asterisk +alsa-lib +libsqlite3
+  DEPENDS:=@ASTERISK_PKG@ +alsa-lib +libsqlite3
   EXTRA_DEPENDS:=kmod-usb2 kmod-usb-acm kmod-usb-serial kmod-usb-serial-option kmod-usb-audio usb-modeswitch
   TITLE:=Quectel module support
 endef
