--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,7 +13,7 @@ on:
 
 env:
   BUILD_TYPE: Release
-  OWRTVER: 22.03.5
+  OWRTVER: 23.05.0
   UBUNTU_DISTRO: ubuntu22.04
 
 jobs:
@@ -24,7 +24,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: jidicula/clang-format-action@v4.11.0
       with:
-        clang-format-version: 16
+        clang-format-version: 17
         check-path: src
 
   pre-build:
@@ -97,6 +97,7 @@ jobs:
 
   build-deb-pkg-arch:
     needs: pre-build
+    continue-on-error: true
     strategy:
       matrix:
         arch: [armv7, aarch64]
@@ -171,6 +172,7 @@ jobs:
   build-openwrt-pkg:
     runs-on: ubuntu-latest
     needs: pre-build
+    continue-on-error: true
     strategy:
       matrix:
         include:
@@ -188,12 +190,12 @@ jobs:
           - target: bcm63xx-generic
             arch: mips
             cpu-type: mips32
-          - target: armvirt-32
-            arch: arm
+          - target: armsr-armv7
+            arch: armv7
             cpu-type: cortex-a15
             cpu-subtype: neon-vfpv4
             eabi: true
-          - target: rockchip-armv8
+          - target: armsr-armv8
             arch: aarch64
             cpu-type: generic
           - target: bcm27xx-bcm2708
@@ -218,7 +220,6 @@ jobs:
             arch: arm
             cpu-type: xscale
             eabi: true
-            kirkwood: true
     steps:
     - name: Checkout actions
       uses: actions/checkout@v3
@@ -230,11 +231,10 @@ jobs:
     - uses: ./.github/actions/install-openwrt-sdk
       with:
         openwrt-version: ${{ env.OWRTVER }}
-        gcc-version: 11.2.0
+        gcc-version: 12.3.0
         target: ${{ matrix.target }}
         arch: ${{ matrix.arch }}
         eabi: ${{ matrix.eabi }}
-        kirkwood: ${{ matrix.kirkwood }}
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0
