--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -263,7 +263,7 @@ jobs:
       run: ./scripts/feeds install asterisk-chan-quectel
     - name: Build OpenWRT packages
       working-directory: asterisk-modules/asterisk-chan-quectel/install/openwrt/${{ matrix.target }}
-      run: ./build-opk.sh
+      run: ./build-opk.sh default 200300
     - name: Archive IPK
       uses: actions/upload-artifact@v3
       with:
