Add new 'sms db backup' command
Path to backup file is specified in configuration file.

--- a/etc/quectel.conf
+++ b/etc/quectel.conf
@@ -1,6 +1,7 @@
 [general]
 ;interval=60				; Number of seconds between trying to connect to devices
 ;smsdb=:memory:				; /var/lib/asterisk/smsdb
+;smsdb_backup=/var/lib/asterisk/smsdb-backup
 ;csmsttl=600
 
 [defaults]
