Register custom functions and applications
- Add QUECTEL_STATUS and QUECTEL_STATUS_EX custom functions (read-only).
- Add QUECTEL_SEND_SMS and QUECTEL_SEND_USSD applications.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -148,6 +148,7 @@ IF(NOT DEFINED ASTERISK_VERSION_NUM)
 ENDIF()
 
 OPTION(ICONV_CONST "iconv() const declaration of input buffer" OFF)
+OPTION(BUILD_APPLICATIONS "Build applications" ON)
 OPTION(PTIME_USE_DEFAULT "Use default framing" ON)
 SET(ICONV_T iconv_t CACHE STRING "iconv type")
 SET(AST_MODULE chan_quectel)
