smsdb: Use sqlite3_open_v2 function
Forcing serialized threading mode. Minimal SQLite version: 3.6.5 (2008-11-12).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -212,7 +212,7 @@ CHECK_INCLUDE_FILE(unistd.h HAVE_UNISTD_H)
 
 FIND_PACKAGE(Threads REQUIRED)
 FIND_PACKAGE(ALSA REQUIRED)
-FIND_PACKAGE(SQLite3 REQUIRED)
+FIND_PACKAGE(SQLite3 3.6.5 REQUIRED)
 FIND_PACKAGE(Iconv REQUIRED)
 
 IF(ICONV_CONST)
