--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -211,7 +211,7 @@ CHECK_INCLUDE_FILE(termios.h HAVE_TERMIOS_H)
 CHECK_INCLUDE_FILE(unistd.h HAVE_UNISTD_H)
 
 FIND_PACKAGE(Threads REQUIRED)
-FIND_PACKAGE(ALSA REQUIRED)
+FIND_PACKAGE(ALSA 1.1.2 REQUIRED)
 FIND_PACKAGE(SQLite3 3.6.5 REQUIRED)
 FIND_PACKAGE(Iconv REQUIRED)
 
