CMake: Use pkg-info
Read ASTERISK_VERSION_NUM from pkg-info if possible.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -144,6 +144,20 @@ IF(OPENWRT_PACKAGE)
 ENDIF()
 
 IF(NOT DEFINED ASTERISK_VERSION_NUM)
+    FIND_PACKAGE(PkgConfig)
+    IF(${PKG_CONFIG_FOUND})
+        MESSAGE(DEBUG "Obtaining Asterisk version from pkg-info")
+        pkg_check_modules(AST QUIET asterisk)
+        IF(${AST_FOUND})
+            MESSAGE(DEBUG "pkg-info: asterisk module found")
+            pkg_get_variable(ASTERISK_VERSION_NUM asterisk version_number)
+            MESSAGE(VERBOSE "Asterisk version (from pkg-info): ${ASTERISK_VERSION_NUM}")
+        ENDIF()
+    ENDIF()
+ENDIF()
+
+IF(NOT DEFINED ASTERISK_VERSION_NUM)
+    MESSAGE(WARNING "ASTERISK_VERSION_NUM variable not defined, using default value")
     SET(ASTERISK_VERSION_NUM 180000 CACHE STRING "Asterisk version")
 ENDIF()
 
