--- a/docker/debian.11/Dockerfile
+++ b/docker/debian.11/Dockerfile
@@ -4,6 +4,55 @@
 # Building chan_quectel on Debian 11 (Bullseye)
 #
 
+FROM debian:bullseye-slim AS arm-gnu-toolchain
+
+ARG ARM_GNU_TOOLCHAIN_VER=13.2.rel1
+
+RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
+    --mount=type=cache,target=/var/lib/apt,sharing=locked <<-EOF
+#!/bin/bash -e
+
+apt-get -qq update -y
+apt-get -qq install -y --no-install-recommends xz-utils
+EOF
+
+RUN --network=none <<-EOF
+#!/bin/bash -e
+
+mkdir -p /build/arm-gnu-toolchain
+chown -R nobody:nogroup /build
+EOF
+
+FROM arm-gnu-toolchain AS arm-gnu-toolchain-gnueabihf
+
+USER nobody:nogroup
+WORKDIR /build/arm-gnu-toolchain
+ADD --chown=nobody:nogroup \
+    http://armkeil.blob.core.windows.net/developer/Files/downloads/gnu/${ARM_GNU_TOOLCHAIN_VER}/binrel/arm-gnu-toolchain-${ARM_GNU_TOOLCHAIN_VER}-x86_64-arm-none-linux-gnueabihf.tar.xz \
+    .
+RUN --network=none <<-EOF
+#!/bin/bash -e
+
+tar -xf arm-gnu-toolchain-${ARM_GNU_TOOLCHAIN_VER}-x86_64-arm-none-linux-gnueabihf.tar.xz
+rm arm-gnu-toolchain-${ARM_GNU_TOOLCHAIN_VER}-x86_64-arm-none-linux-gnueabihf.tar.xz
+ln -s arm-gnu-toolchain-*-x86_64-arm-none-linux-gnueabihf arm-none-linux-gnueabihf
+EOF
+
+FROM arm-gnu-toolchain AS arm-gnu-toolchain-aarch64
+
+USER nobody:nogroup
+WORKDIR /build/arm-gnu-toolchain
+ADD --chown=nobody:nogroup \
+    http://armkeil.blob.core.windows.net/developer/Files/downloads/gnu/${ARM_GNU_TOOLCHAIN_VER}/binrel/arm-gnu-toolchain-${ARM_GNU_TOOLCHAIN_VER}-x86_64-aarch64-none-linux-gnu.tar.xz \
+    .
+RUN --network=none <<-EOF
+#!/bin/bash -e
+
+tar -xf arm-gnu-toolchain-${ARM_GNU_TOOLCHAIN_VER}-x86_64-aarch64-none-linux-gnu.tar.xz
+rm arm-gnu-toolchain-${ARM_GNU_TOOLCHAIN_VER}-x86_64-aarch64-none-linux-gnu.tar.xz
+ln -s arm-gnu-toolchain-*-x86_64-aarch64-none-linux-gnu aarch64-none-linux-gnu
+EOF
+
 FROM debian:bullseye-slim AS base
 ARG DEBIAN_FRONTEND=noninteractive
 
@@ -15,7 +64,7 @@ RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
 apt-get -qq update -y
 apt-get -qq install -y --no-install-recommends \
     file build-essential \
-    ca-certificates \
+    ca-certificates jq \
     libsqlite3-dev libasound2 libssl1.1 \
     libedit2 uuid libxml2 libjansson4
 EOF
@@ -92,34 +141,43 @@ RUN --network=none make -j$(nproc) OPTIMIZE=-fmerge-constants
 RUN --network=none DESTDIR=/build/install make install-headers
 
 FROM base AS chan-quectel-base 
-
-# git branch
 ARG BRANCH=master
+ARG SKIPCACHE_URL=https://www.random.org/cgi-bin/randbyte?nbytes=10&format=h
 
 RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
     --mount=type=cache,target=/var/lib/apt,sharing=locked <<-EOF
 #!/bin/bash -e
 
 apt-get -qq update -y
-apt-get -qq install -y --no-install-recommends git libasound2-dev
+apt-get -qq install -y --no-install-recommends dpkg-dev git libasound2-dev
 EOF
 
 COPY --from=cmake --link /build/install/ /
 COPY --from=asterisk --link /build/install/ /
 
 WORKDIR /build
-USER nobody:nogroup
+COPY --chown=nobody:nogroup --chmod=750 <<EOF git-clone.sh
+#!/bin/bash -e
 
-RUN git clone -q --branch=${BRANCH} http://github.com/RoEdAl/asterisk-chan-quectel.git chan-quectel
-
-USER root
+git clone -q --branch=${BRANCH} http://github.com/RoEdAl/asterisk-chan-quectel.git chan-quectel
+EOF
 
 FROM chan-quectel-base AS chan-quectel
 
-WORKDIR /build/chan-quectel
 USER nobody:nogroup
-RUN --network=none cmake --preset=default
-RUN --network=none cmake --build --preset=package
+WORKDIR /build
+ADD ${SKIPCACHE_URL} skipcache
+RUN ./git-clone.sh
+
+WORKDIR /build/chan-quectel
+RUN --network=none \
+    --mount=type=tmpfs,target=/build/chan-quectel/build <<-EOF
+#!/bin/bash -e
+
+./get-build-flags.sh deb > CMakeUserPresets.json
+cmake --preset=deb
+cmake --build --preset=package-deb
+EOF
 
 FROM chan-quectel-base AS chan-quectel-armhf
 
@@ -134,14 +192,110 @@ apt-get -qq install -y --no-install-recommends \
     libsqlite3-dev:armhf libasound2-dev:armhf
 EOF
 
-WORKDIR /build/chan-quectel
 USER nobody:nogroup
-RUN --network=none cmake \
-    -DASTERISK_VERSION_NUM=200100 \
-    -DCMAKE_TOOLCHAIN_FILE=cmake/toolchain/arm-linux-gnueabihf.toolchain.cmake \
-    -DCPACK_PACKAGE_ARCHITECTURE=armhf \
-    --preset=default 
-RUN --network=none cmake --build --preset=package
+WORKDIR /build
+ADD ${SKIPCACHE_URL} skipcache
+RUN ./git-clone.sh
+
+WORKDIR /build/chan-quectel
+RUN --network=none \
+    --mount=type=tmpfs,target=/build/chan-quectel/build <<-EOF
+#!/bin/bash -e
+
+./get-build-flags.sh deb > CMakeUserPresets.json
+cmake --toolchain=cmake/toolchain/arm-linux-gnueabihf.toolchain.cmake --preset=deb
+cmake --build --preset=package-deb
+EOF
+
+FROM chan-quectel-base AS chan-quectel-armhf-ext-toolchain
+
+RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
+    --mount=type=cache,target=/var/lib/apt,sharing=locked <<-EOF
+#!/bin/bash -e
+
+dpkg --add-architecture armhf
+apt-get -qq update -y
+apt-get -qq install -y --no-install-recommends libsqlite3-dev:armhf libasound2-dev:armhf
+EOF
+
+USER nobody:nogroup
+WORKDIR /build
+ADD ${SKIPCACHE_URL} skipcache
+RUN ./git-clone.sh
+
+WORKDIR /build/chan-quectel
+RUN --network=none ./get-build-flags.sh deb > CMakeUserPresets.json
+RUN --network=none \
+    --mount=type=tmpfs,target=/build/chan-quectel/build \
+    --mount=type=bind,from=arm-gnu-toolchain-gnueabihf,source=/build/arm-gnu-toolchain,target=/build/arm-gnu-toolchain <<-EOF
+#!/bin/bash -e
+
+cmake --toolchain=cmake/toolchain/arm-none-linux-gnueabihf.toolchain.cmake --preset=deb
+cmake --build --preset=package-deb
+EOF
+
+FROM --platform=linux/arm/v6 balenalib/rpi-debian:bullseye-build AS rpi-debian
+
+RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
+    --mount=type=cache,target=/var/lib/apt,sharing=locked <<-EOF
+#!/bin/bash -e
+
+apt-get -qq update -y
+apt-get -qq install -y --no-install-recommends libsqlite3-dev libasound2-dev asterisk-dev
+EOF
+
+FROM chan-quectel-base AS chan-quectel-rpi
+
+ARG RPI_VERSION=1
+
+RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
+    --mount=type=cache,target=/var/lib/apt,sharing=locked <<-EOF
+#!/bin/bash -e
+
+apt-get -qq update -y
+apt-get -qq install -y --no-install-recommends \
+   gcc-arm-linux-gnueabihf g++-arm-linux-gnueabihf binutils-arm-linux-gnueabihf
+EOF
+
+USER nobody:nogroup
+WORKDIR /build
+ADD ${SKIPCACHE_URL} skipcache
+RUN ./git-clone.sh
+
+WORKDIR /build/chan-quectel
+RUN --network=none ./get-build-flags.sh rpi > CMakeUserPresets.json
+RUN --network=none \
+    --mount=type=tmpfs,target=/build/chan-quectel/build \
+    --mount=type=bind,from=rpi-debian,source=/,target=/build/rpi <<-EOF
+#!/bin/bash -e
+
+env TOOLSET_TARGET_RPI=${RPI_VERSION} \
+    cmake --toolchain=cmake/toolchain/arm-linux-gnueabihf.toolchain.cmake --preset=deb
+cmake --build --preset=package-deb
+EOF
+
+FROM chan-quectel-base AS chan-quectel-rpi-ext-toolchain
+
+ARG RPI_VERSION=1
+
+USER nobody:nogroup
+WORKDIR /build
+ADD ${SKIPCACHE_URL} skipcache
+RUN ./git-clone.sh
+
+WORKDIR /build/chan-quectel
+RUN --network=none ./get-build-flags.sh rpi > CMakeUserPresets.json
+RUN --network=none \
+    --mount=type=tmpfs,target=/build/chan-quectel/build \
+    --mount=type=bind,from=arm-gnu-toolchain-gnueabihf,source=/build/arm-gnu-toolchain,target=/build/arm-gnu-toolchain \
+    --mount=type=bind,from=rpi-debian,source=/,target=/build/rpi <<-EOF
+#!/bin/bash -e
+
+env TOOLSET_TARGET_RPI=${RPI_VERSION} \
+    cmake --toolchain=cmake/toolchain/arm-none-linux-gnueabihf.toolchain.cmake \
+    --preset=deb
+cmake --build --preset=package-deb
+EOF
 
 FROM chan-quectel-base AS chan-quectel-arm64
 
@@ -156,11 +310,45 @@ apt-get -qq install -y --no-install-recommends \
     libsqlite3-dev:arm64 libasound2-dev:arm64
 EOF
 
-WORKDIR /build/chan-quectel
 USER nobody:nogroup
-RUN --network=none cmake \
-    -DASTERISK_VERSION_NUM=200100 \
-    -DCMAKE_TOOLCHAIN_FILE=cmake/toolchain/aarch64-linux-gnu.toolchain.cmake \
-    -DCPACK_PACKAGE_ARCHITECTURE=arm64 \
-    --preset=default 
-RUN --network=none cmake --build --preset=package
+WORKDIR /build
+ADD ${SKIPCACHE_URL} skipcache
+RUN ./git-clone.sh
+
+WORKDIR /build/chan-quectel
+RUN --network=none \
+    --mount=type=tmpfs,target=/build/chan-quectel/build <<-EOF
+#!/bin/bash -e
+
+./get-build-flags.sh deb > CMakeUserPresets.json
+cmake --toolchain=cmake/toolchain/aarch64-linux-gnu.toolchain.cmake --preset=deb
+cmake --build --preset=package-deb
+EOF
+
+FROM chan-quectel-base AS chan-quectel-arm64-ext-toolchain
+
+RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
+    --mount=type=cache,target=/var/lib/apt,sharing=locked <<-EOF
+#!/bin/bash -e
+
+dpkg --add-architecture arm64
+apt-get -qq update -y
+apt-get -qq install -y --no-install-recommends libsqlite3-dev:arm64 libasound2-dev:arm64
+EOF
+
+USER nobody:nogroup
+WORKDIR /build
+ADD ${SKIPCACHE_URL} skipcache
+RUN ./git-clone.sh
+
+WORKDIR /build/chan-quectel
+RUN --network=none ./get-build-flags.sh deb > CMakeUserPresets.json
+RUN --network=none \
+    --mount=type=tmpfs,target=/build/chan-quectel/build \
+    --mount=type=bind,from=arm-gnu-toolchain-aarch64,source=/build/arm-gnu-toolchain,target=/build/arm-gnu-toolchain <<-EOF
+#!/bin/bash -e
+
+cmake \
+    --toolchain=cmake/toolchain/aarch64-none-linux-gnu.toolchain.cmake --preset=deb
+cmake --build --preset=package-deb
+EOF
