--- a/docker/rpi-debian.10/Dockerfile
+++ b/docker/rpi-debian.10/Dockerfile
@@ -14,7 +14,7 @@ RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
 
 apt-get -qq update -y
 apt-get -qq install -y --no-install-recommends \
-    file ca-certificates \
+    file ca-certificates jq \
     libsqlite3-dev libssl1.1
 EOF
 
@@ -53,8 +53,8 @@ RUN --network=none make -j$(nproc)
 RUN --network=none DESTDIR=/build/install make install
 
 FROM base as chan-quectel-base
-
 ARG BRANCH=master
+ARG SKIPCACHE_URL=https://www.random.org/cgi-bin/randbyte?nbytes=10&format=h
 
 RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
     --mount=type=cache,target=/var/lib/apt,sharing=locked <<-EOF
@@ -62,20 +62,32 @@ RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
 
 apt-get -qq update -y
 apt-get -qq install -y --no-install-recommends \
+    dpkg-dev \
     libasound2-dev asterisk-dev
 EOF
 
 COPY --from=cmake --link /build/install/ /
 
 WORKDIR /build
-USER nobody:nogroup
-RUN git clone -q --branch=${BRANCH} http://github.com/RoEdAl/asterisk-chan-quectel.git chan-quectel
+COPY --chown=nobody:nogroup --chmod=750 <<EOF git-clone.sh
+#!/bin/bash -e
 
-USER root
+git clone -q --branch=${BRANCH} http://github.com/RoEdAl/asterisk-chan-quectel.git chan-quectel
+EOF
 
 FROM chan-quectel-base AS chan-quectel
 
-WORKDIR /build/chan-quectel
 USER nobody:nogroup
-RUN --network=none cmake -DASTERISK_VERSION_NUM=162800 --preset=default
-RUN --network=none cmake --build --preset=package
+WORKDIR /build
+ADD ${SKIPCACHE_URL} skipcache
+RUN ./git-clone.sh
+
+WORKDIR /build/chan-quectel
+RUN --network=none \
+    --mount=type=tmpfs,target=/build/chan-quectel/build <<-EOF
+#!/bin/bash -e
+
+./get-build-flags.sh deb > CMakeUserPresets.json
+cmake -DASTERISK_VERSION_NUM=162800 --preset=deb
+cmake --build --preset=package-deb
+EOF
